[package]
name = "porta-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.26", features = ["serde"] }
uuid = { version = "1.3.4", features = ["v4", "serde"] }
tower-http = { version = "0.4.3", features = ["cors"] }
tower-cookies = "0.9"
jsonwebtoken = "8.3.0"
once_cell = "1.18.0"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
