[package]
name = "porta-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
chrono = { version = "0.4.26", features = ["serde"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
tower-http = { version = "0.4.3", features = ["cors"] }
tower-cookies = "0.9"
jsonwebtoken = "8.3.0"
once_cell = "1.18.0"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
