[package]
name = "porta-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Axum / Tokio
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.3", features = ["cors"] }
tower-cookies = "0.9"

tracing = "0.1.37"
tracing-subscriber = "0.3.17"
# Serde / Json
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
jsonwebtoken = "9.1.0"

chrono = { version = "0.4.26", features = ["serde"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
once_cell = "1.18.0"
# Validators
validator = { version = "0.16.1", features = ["derive"] }
lazy-regex = "3.0.1"
# Storage / SQL
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "json", "postgres"] }
base64 = "0.21.2"
async-trait = "0.1.73"
strum_macros = "0.25.2"
serde_with = "3.3.0"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
